# healthcare-predictor

./: .env.example  .gitignore  README.md  docker_compose.yml  pyproject.toml  render.yaml  requirements.txt
.github/workflows/: retrain.yml
Frontend/: index.html
app/: main.py
ml/: train.py
models/: encoders.joblib  scaler.joblib
scripts/: clean.py  ingest.py  load.py
